<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityAndroidKeyChain" >

    <LinearLayout
        android:id="@+id/buttons_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/import_p12" />

        <Button
            android:id="@+id/useprivatekey_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/useprivatekey_label" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/exit_label" />
    </LinearLayout>

    <EditText
        android:id="@+id/inDataText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/buttons_bar"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/in_data"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/outDataText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/inDataText"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/out_data"
        android:textSize="14sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/outDataText"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/debugText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

</RelativeLayout>