<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActivityAndroidKeyStoreGenerateKey$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/buttons_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/genera_chiavi"
        android:layout_marginBottom="10dp"
        android:id="@+id/generate_button"/>
    
    <Button
        android:id="@+id/access_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi_chiavi" />
    <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/exit_label" />

    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_bar"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true"
        android:scrollbars="vertical" >

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/debugText"/>

    </ScrollView>

</RelativeLayout>
